# monorag

./: .env.example  .gitignore  LICENSE  README.md  cli.py  example_usage.py  pyproject.toml  requirements.txt  test_results.txt
rag_core/: __init__.py  chunker.py  embedder.py  generator.py  mcp_server.py  module.py  retriever.py  utils.py
tests/: conftest.py  test_chunker.py  test_embedder.py  test_generator.py  test_mcp_server.py  test_module.py  test_retriever.py  test_utils.py
