[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monorag"
version = "0.1.0"
description = "Sistema de Recuperación Aumentada por Generación (RAG) para documentos técnicos"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.0.7",
    "sentence-transformers==4.1.0",
    "groq==0.25.0",
    "pdfplumber==0.11.6",
    "python-dotenv==1.1.0",
    "rich==14.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "hypothesis==6.131.0",
]

[tool.setuptools.packages.find]
include = ["rag_core*"]
